# Multiverso

Applications/KMeans/: CMakeLists.txt
Applications/KMeans/src/: configure.cpp  configure.h  data_type.h  kmeans_reader.cpp  main.cpp  reader.h  train1_main.cpp  train_main.cpp
Applications/KMeans/src/util/: common.h  ftrl_sparse_table.h  hopscotch_hash.h  log.cpp  log.h  sparse_table.h  timer.h
include/multiverso/: communicator.h  meta.h  multiverso.h  server.h
src/multiverso/: communicator.cpp  multiverso.cpp
src/multiverso_server/: cl_parser.cpp  cl_parser.h  main.cpp
